[gd_scene load_steps=2 format=3 uid="uid://worldselect_ss"]

[ext_resource type="Script" path="res://scripts/world_select.gd" id="1_worldselect"]

[node name="WorldSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_worldselect")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.18, 0.25, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 18.0
offset_right = 120.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(1, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 30
text = "SELECT WORLD"
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 22.0
offset_right = -15.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
theme_override_font_sizes/font_size = 17
text = " 0"
horizontal_alignment = 2

[node name="ProgressLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 55.0
offset_right = 80.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 14
text = "0 / 25 levels"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = 85.0
offset_right = 225.0
offset_bottom = 715.0

[node name="WorldsContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -65.0
offset_right = 140.0
offset_bottom = -18.0
alignment = 1
theme_override_constants/separation = 18

[node name="BackButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(110, 42)
text = "BACK"

[node name="ShopButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(110, 42)
text = "SHOP"

[connection signal="pressed" from="ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ButtonContainer/ShopButton" to="." method="_on_shop_button_pressed"]
